hw02/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  labels:
    app: java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
        - name: java
          image: 17709729/otus-microservice:hw01
          ports:
            - containerPort: 8080
