hw02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: java-service
                port:
                  number: 80
